2023-11-27_kubernetes_generali/k/01_pod_tools.yml
apiVersion: v1
kind: Pod
metadata:
  name: tools
spec:
  containers:
    - name: main
      image: sikalabs/dev
      command: ["/bin/bash", "-c", "sleep 1000000000"]
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 100Mi
          cpu: 100m
        limits:
          memory: 200Mi
          cpu: 200m
      # securityContext:
      #   allowPrivilegeEscalation: false
      #   capabilities:
      #     drop:
      #       - ALL
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   seccompProfile:
      #     type: RuntimeDefault
