2023-11-27_kubernetes_generali/k/04_01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  revisionHistoryLimit: 0
  replicas: 4
  # strategy:
  #   type: Recreate
  selector:
    matchLabels:
      app: hello-world-deploy
  template:
    metadata:
      labels:
        app: hello-world-deploy
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
