2023-11-27_kubernetes_generali/k/private_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-pod
  labels:
    svc: example
spec:
  imagePullSecrets:
    - name: private-registry-credentials
  containers:
    - name: hello
      image: registry.sikalabs.com/pseudo-private/hello-world:latest
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
