2023-11-27_kubernetes_generali/k/09_wordpress.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  selector:
    matchLabels:
      project: wordpress
      app: mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        project: wordpress
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          resources:
            requests:
              cpu: 50m
              memory: 300Mi
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  selector:
    project: wordpress
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      project: wordpress
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        project: wordpress
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress
      volumes:
        - name: wordpress
          persistentVolumeClaim:
            claimName: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  selector:
    project: wordpress
    app: wordpress
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
    - host: wordpress.k8sdb.cpas.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
