2023-11-27_kubernetes_generali/k/ingress-paths.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers-paths
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: xxx.k8sdb.cpas.cz
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /caddy(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
    - host: localhost
      http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /caddy(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
