2023-11-27_kubernetes_generali/k/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
spec:
  rules:
    - host: example.k8sdb.cpas.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
