2023-11-27_kubernetes_generali/k/init_containers.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: redis
          resources:
            requests:
              cpu: 30m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 80Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"StatefulSet","name":"redis"}]
spec:
  selector:
    matchLabels:
      app: counter
  replicas: 2
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 60Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  rules:
    - host: counter.k8sdb.cpas.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
